k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: akka-http-k8s
  name: akka-http-k8s-service
spec:
  selector:
      app: akka-http-k8s
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
